[tool.poetry]
name = "rag-chunk-visualizer"
version = "0.1.0"
description = "RAG chunk visualization tool"
authors = ["Chance Dean <novelnexusai@outlook.com>"]
readme = "README.md"
packages = [{include = "rag_chunk_visualizer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.3"
rich = "^13.7.0"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
rag-chunk-visualizer = "rag_chunk_visualizer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
